[gd_scene load_steps=10 format=2]

[ext_resource path="res://minigames/Escape-room/scripts/BackButton.gd" type="Script" id=1]
[ext_resource path="res://minigames/Escape-room/scripts/TurnBtn.gd" type="Script" id=2]
[ext_resource path="res://minigames/Escape-room/scenes/Backpack-btn.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/Escape-room/scenes/Narrative.tscn" type="PackedScene" id=4]
[ext_resource path="res://minigames/Escape-room/scripts/PAUSE.gd" type="Script" id=5]
[ext_resource path="res://minigames/Escape-room/scripts/fade.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "begining"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.802
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PlayerGUI" type="CanvasLayer"]

[node name="fade" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 1.0
margin_right = 1028.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade"]
playback_speed = 4.0
anims/RESET = SubResource( 1 )
anims/begining = SubResource( 3 )
anims/fade = SubResource( 2 )

[node name="Inv" parent="." instance=ExtResource( 3 )]
pause_mode = 2
margin_left = -60.0
margin_top = -52.0
margin_right = 275.0
margin_bottom = 309.0

[node name="BackBtn" type="Button" parent="."]
pause_mode = 2
modulate = Color( 0.921569, 1, 0, 1 )
margin_left = 31.0
margin_top = 460.0
margin_right = 128.0
margin_bottom = 557.0
text = "BACK"
script = ExtResource( 1 )

[node name="TurnBtn" type="Button" parent="."]
margin_left = 288.0
margin_top = 511.0
margin_right = 714.0
margin_bottom = 562.0
text = "Turn Around ->"
script = ExtResource( 2 )

[node name="Label" parent="." instance=ExtResource( 4 )]

[node name="PAUSE" type="Label" parent="."]
visible = false
margin_left = 404.0
margin_top = 140.0
margin_right = 455.0
margin_bottom = 154.0
rect_scale = Vector2( 3.94995, 3.94995 )
text = "PAUSED"
script = ExtResource( 5 )

[connection signal="pressed" from="BackBtn" to="BackBtn" method="_on_Button_pressed"]
